# ollama-sentinel

./: .gitignore  CLAUDE.md  README.md  ollama-sentinel.yaml  pyproject.toml  requirements.txt  reviews
.github/workflows/: sturgeon-map-build.yml  sturgeon-map-scheduled.yml  test.yml
.sturgeon_map_work/: build_sturgeon_source.py
_archive/: README.md
_archive/ollama_sentinel_pre_memory_snapshot/: config.py  processor.py  watcher.py
_archive/research_agent_orphans/: metrics.py  prompt.py
docs/: GUIDE.md  VISION.md  index.html
docs/brainstorms/: 2026-06-08-pattern-promotion-guardrails-requirements.md
docs/decisions/: 0001-three-layer-recall.md  ADR-SYSTEM.md  INDEX.md
docs/plans/: 2026-04-09-001-feat-memory-and-impact-plan.md  2026-06-07-001-docs-refresh-vision-and-handoff-plan.md  2026-06-08-001-feat-pattern-promotion-guardrails-plan.md
docs/retros/: 2026-05-02-cb3-phase-a.md  2026-05-03-config-and-timeout-debugging.md  2026-05-16-plan-audit-and-v02-pieces-1-3.md
docs/session-notes/: 2026-05-05-ux-centralization-session-summary.md  2026-06-07-vision-refresh-and-arc-complete-handoff.md  2026-06-08-guardrails-planned-dx-backlog-drained-handoff.md  2026-06-13-guardrails-built-8pr-stack-handoff.md  2026-06-13-guardrails-merged-handoff.md  2026-06-29-embedder-prewarm-handoff.md
docs/superpowers/: followups.md
docs/superpowers/notes/: qwen3-recall-diff.md
docs/superpowers/plans/: 2026-04-16-context-builder.md  2026-04-16-triage.md  2026-05-01-cb3-wire-find-similar-webpages.md  2026-05-01-phase-a-qwen3-hot-path-swap.md  2026-05-02-v02-incident-schema.md  2026-05-09-reviewer-grounding.md  2026-05-15-implementation-audit.md  2026-05-17-dashboard-triage-revamp.md  2026-05-17-grounding-graceful-degrade.md  2026-06-03-findings-triage.md  2026-06-03-remediate-fix.md  2026-06-03-surface-findings-sarif.md
docs/superpowers/research/: 2026-05-09-v02-deficit-remediation.md  2026-05-09-v02-incident-memory-research.md
docs/superpowers/specs/: 2026-04-16-context-builder-design.md  2026-04-16-triage-design.md  2026-05-17-dashboard-triage-revamp-design.md  2026-06-03-findings-triage-design.md  2026-06-03-remediate-fix-design.md  2026-06-03-surface-findings-sarif-design.md  2026-06-04-stale-prune-design.md
ollama_sentinel/: __init__.py  cli.py  config.py  dashboard.py  dashboard_input.py  extractor.py  guardrails.py  hooks.py  models.py  processor.py  pytest_plugin.py  remediate.py  research_bridge.py  sarif.py  utils.py  violation_db.py  watcher.py
ollama_sentinel/context/: __init__.py  assembler.py  embeddings.py  import_resolver.py  recipes.py  retrievers.py  tokens.py
ollama_sentinel/triage/: __init__.py  extractor.py  prompts.py  runner.py
research_agent/: main.py
research_agent/cli/: history.py  interface.py
research_agent/core/: agent.py  config.py  logging.py  models.py  prompts.py  workflow.py
research_agent/tools/: browser.py  code_context.py  import_resolver.py  memory.py  search.py  synthesis.py  verification.py
research_agent/utils/: cache.py  embedding.py  extraction.py  setup.py
scripts/: embedding_recall_diff.py  sentinel-init.sh  sentinel-run.sh  setup-sentinel-project.sh
tests/: conftest.py  test_cli.py  test_config.py  test_dashboard.py  test_dashboard_input.py  test_edge_cases.py  test_extractor.py  test_grounding_regression.py  test_guardrails.py  test_hooks.py  test_hot_reload.py  test_impact_scan_integration.py  test_import_resolver.py  test_models.py  test_processor.py  test_pytest_plugin.py  test_remediate.py  test_research_agent.py  test_research_bridge.py  test_sarif.py  test_utils.py  test_violation_db.py  test_watcher.py
tests/context/: test_assembler.py  test_embeddings.py  test_recipes.py  test_retrievers.py  test_tokens.py
tests/triage/: test_extractor.py  test_runner.py
