[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-sentinel"
description = "Continuous code review with Ollama"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "httpx>=0.27.0",
    "watchfiles>=0.22.0",
    "pydantic>=2.5.2",
    "pyyaml>=6.0.1",
    "rich>=13.7.1",
    "typer>=0.9.0",
    "gitpython>=3.1.40",
    "tenacity>=8.2.3",
    "pathspec>=0.11.1",
]
dynamic = ["version"]

[project.scripts]
ollama-sentinel = "ollama_sentinel.cli:app"