[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-sentinel"
version = "0.1.0"
description = "Continuous code review with Ollama and a multi-step research agent"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27.0",
    "watchfiles>=0.22.0",
    "pydantic>=2.5.2",
    "pyyaml>=6.0.1",
    "rich>=13.7.1",
    "typer>=0.12.0",
    "gitpython>=3.1.40",
    "tenacity>=8.2.3",
    "pathspec>=0.11.1",
]

[project.optional-dependencies]
research = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.10",
    "langgraph>=0.0.20",
    "openai>=1.10.0",
    "playwright>=1.40.0",
    "click>=8.1.7",
    "toml>=0.10.2",
    "trafilatura>=1.6.0",
    "justext>=3.0.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.6",
    "diskcache>=5.6.0",
    "duckduckgo-search>=4.0.0",
    "sentence-transformers>=2.2.0",
    "llama-index>=0.10.0",
    "pybars3>=0.9.7",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.28.0",
]

[project.scripts]
ollama-sentinel = "ollama_sentinel.cli:app"

[tool.setuptools.packages.find]
include = ["ollama_sentinel*", "research_agent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
