[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-sentinel"
version = "0.1.1"
description = "Continuous code review with Ollama and a multi-step research agent"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27.0",
    "watchfiles>=0.22.0",
    "pydantic>=2.5.2",
    "pyyaml>=6.0.1",
    "rich>=13.7.1",
    "typer>=0.12.0",
    "gitpython>=3.1.40",
    "tenacity>=8.2.3",
    "pathspec>=0.11.1",
    "tiktoken>=0.7.0",
    "diskcache>=5.6.0",
]

[project.optional-dependencies]
research = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.10",
    "langchain-huggingface>=0.1.0",
    "langgraph>=0.0.20",
    "openai>=1.10.0",
    "playwright>=1.40.0",
    "click>=8.1.7",
    "toml>=0.10.2",
    "trafilatura>=1.6.0",
    "justext>=3.0.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.6",
    "duckduckgo-search>=4.0.0",
    "sentence-transformers>=2.2.0",
    "llama-index>=0.10.0",
    "pybars3>=0.9.7",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.28.0",
    # Needed to collect research_agent tests without installing the full [research]
    # stack. tests/test_research_agent.py imports Config (toml) unconditionally as a
    # "Tier 1 always importable" module. (diskcache is already in core deps above.)
    "toml>=0.10.2",
]

[project.scripts]
ollama-sentinel = "ollama_sentinel.cli:app"

[project.entry-points.pytest11]
ollama_sentinel = "ollama_sentinel.pytest_plugin"

[tool.setuptools.packages.find]
include = ["ollama_sentinel*", "research_agent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
